--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         // --- AUDIO ENGINE ---
         // 'clickSound' uses your exact filename from GitHub
-        const clickSound = new Audio('683098__florianreichelt__click.mp3');
+        const clickSound = new Audio('https://github.com/hydradynamo781-sudo/Portfolio-/raw/refs/heads/main/683098__florianreichelt__click.mp3');
         let isMuted = false;
 
         function playSFX(sound) {
